syntax = "proto3";

package todo;

option go_package = "example.com/go_grpc_template;rpc";

service TodoService {
  rpc Index (Empty) returns (IndexResponse);
  rpc Create (NewTodo) returns (Todo);
  rpc Update (Todo) returns (Todo);
  rpc Show (TodoId) returns (Todo);
  rpc Delete (TodoId) returns (Empty);
}

message Empty {}

message IndexResponse {
  repeated Todo items = 1;
}

message NewTodo{
  string title = 1;
  string content = 2;
}

message Todo{
  int32 id = 1;
  string title = 2;
  string content = 3;
}

message TodoId{
  int32 id = 1;
}